--- a/package.json
+++ b/package.json
@@ -12,8 +12,10 @@
     "@react-oauth/google": "^0.12.1",
     "jwt-decode": "^4.0.0",
     "next": "15.1.6",
+    "node-redis": "^0.1.7",
     "react": "^19.0.0",
-    "react-dom": "^19.0.0"
+    "react-dom": "^19.0.0",
+    "redis": "^4.7.0"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
