--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@react-oauth/google": "^0.12.1",
     "jwt-decode": "^4.0.0",
+    "lucide-react": "^0.488.0",
     "next": "15.1.6",
     "node-redis": "^0.1.7",
     "pg": "^8.13.1",
